fixed delete user on desktop - still an issue on mobile

--- a/frontend/src/user/pages/Account.css
+++ b/frontend/src/user/pages/Account.css
@@ -1,4 +1,4 @@
-.account_card {
+.account_card.card{
     display: flex;
     justify-content:space-between;
     margin: 0 auto;
